<resources>
    <string name="app_name">Voice Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="exit">Exit</string>
    <string name="add_new_shopping_list_label">Add New Shopping List</string>
    <string name="help_label">Help</string>
    <string name="my_shopping_lists_label">My Shopping Lists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waiting_for_command_label">Waiting for command...</string>
    <string name="please_wait_label">Please wait.</string>
    <string name="add_item_label">Add item</string>
    <string name="product_checkbox_tag">checkbox_tag</string>
    <string name="tv_product_name_container_tag">edit_text_tag</string>
    <string name="shopping_list_name_label">Shopping list name</string>
    <string name="save_label">Save</string>
    <string name="title_activity_add_shopping_list">AddShoppingListActivity</string>
    <string name="finish_shopping_list_label">Finish shopping list</string>
    <string name="start_listening_label">Start listening</string>
    <string name="product_index_tag" />
    <string name="created_on_label">Created on:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="products_count_label">Products count:</string>
    <string name="add_product_label">Add product</string>
    <string name="commands_result_text_view_tag">commands_result_tag</string>
    <string name="mic_result_tag">mic_result_tag</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="voice_commands_label">Voice commands</string>
    <string name="save_shopping_list_label">Save shopping list</string>
    <string name="show_me_how_label">Show me how</string>
    <string name="help_start_listening_text">To make the shopping list application start listening for Your commands you just need to tap on the microphone icon in the app bar.</string>
    <string name="help_microphone_level_text">Then You will see the microphone level indicator:</string>
    <string name="title_activity_help_voice_commands">HelpVoiceCommandsActivity</string>
    <string name="title_activity_help_add_product">HelpAddProductActivity</string>
    <string name="help_add_product_text">To add product to the shopping list you need to enter it\'s name with voice command or manually by entering it.</string>
    <string name="manipulate_product_label">Manipulate product in list</string>
    <string name="title_activity_help_manipulate_product">HelpManipulateProductActivity</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="backup_label">Backup</string>
    <string name="restore_label">Restore</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="delete_all_label">Delete all</string>
    <string name="register_label">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="show_all_commands">Show all commands</string>
    <string name="all_commands_list"><![CDATA[Shopping list commands: \n\nproduct [name] -> adds new product to the shopping list.\n\ncheck [number] -> marks the product with the number as checked. \n\nuncheck [number] -> marks the product with this number as unchecked. \n\ndelete [number] -> deletes the product with this number. \n\nfinish -> finishes the shopping list and navigates to save shopping list.]]></string>
</resources>
