<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_row_template"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:tag="@string/product_index_tag"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />
    <TextView
        android:tag="@string/tv_product_name_container_tag"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"/>
    <CheckBox
            android:tag="@string/product_checkbox_tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onCheckBoxClick" />


</LinearLayout>
