<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.telerik.academy.voiceshoppinglist.HelpVoiceCommandsActivity"
    tools:showIn="@layout/activity_help_voice_commands">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/iv_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/app_bar" />

        <ImageView
            android:id="@+id/iv_pointer"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:src="@drawable/pointer_png" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_show_commands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_commands" />

            <TextView
                style="@style/CommandsResultTextView"
                android:text="@string/help_start_listening_text" />

            <Button
                android:id="@+id/btn_show_me_how"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_me_how_label" />

            <TextView
                style="@style/CommandsResultTextView"
                android:text="@string/help_microphone_level_text" />

            <View
                style="@style/ViewMicResult"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:tag="@string/mic_result_tag"
                android:visibility="visible" />

            <TextView
                style="@style/CommandsResultTextView"
                android:text="Also a text will appear. When it says:" />

            <TextView
                style="@style/CommandsResultTextView"
                android:tag="@string/commands_result_text_view_tag"
                android:visibility="visible" />

            <TextView
                style="@style/CommandsResultTextView"
                android:text="You should wait for the waiting for command text:" />

            <TextView
                style="@style/CommandsResultTextView"
                android:tag="@string/commands_result_text_view_tag"
                android:text="@string/waiting_for_command_label"
                android:visibility="visible" />

            <TextView
                style="@style/CommandsResultTextView"
                android:text="Then You can start talking." />

            <TextView
                style="@style/CommandsResultTextView"
                android:text="To make the application stop listening for voice commands just tap on the microphone button again." />

            <Button
                android:id="@+id/btn_show_me_how_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_me_how_label" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
