<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.telerik.academy.voiceshoppinglist.HelpActivity"
    tools:showIn="@layout/activity_help">

    <Button
        android:id="@+id/btn_voice_commands"
        style="@style/MainMenuButton"
        android:layout_height="wrap_content"
        android:text="@string/voice_commands_label" />

    <Button
        android:id="@+id/btn_add_product"
        style="@style/MainMenuButton"
        android:layout_height="wrap_content"
        android:text="@string/add_product_label" />

    <Button
        android:id="@+id/btn_manipulate_product"
        style="@style/MainMenuButton"
        android:layout_height="wrap_content"
        android:text="@string/manipulate_product_label" />

</LinearLayout>
