<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/shopping_list_toolbar"
    android:orientation="vertical"
    tools:context=".ViewShoppingListActivity"
    tools:showIn="@layout/activity_view_shopping_list">

    <View
        style="@style/ViewMicResult"
        android:tag="@string/mic_result_tag" />

    <TextView
        android:id="@+id/tv_shopping_list_commands_result"
        style="@style/CommandsResultTextView"
        android:tag="@string/commands_result_text_view_tag" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:activity=".MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/productsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical" />

            <EditText
                android:id="@+id/newProductNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/add_item_label" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
